--- a/Scanner/Views/Scanner/Index.cshtml
+++ b/Scanner/Views/Scanner/Index.cshtml
@@ -14,6 +14,7 @@
 
             $('#clear').click(function () {
                 $('#data').find("tr:gt(0)").remove(); //remove all table rows except the headings
+                $('#ID').val('');
                 $('#Save').val('');
                 $('#Save2').val('');
                 $('#uploadFlag').val("");
@@ -27,12 +28,6 @@
                     $('#Save').val('');
                 });
             });
-
-            function uploadForm() {
-                setTimeout(function () {
-                    $("#uploadForm").submit();
-                }, 0);
-            }
 
             $('#ID').keydown(function (event) {
                 if (event.keyCode == 9) {
@@ -52,138 +47,146 @@
 
 <!DOCTYPE html>
 <html>
-<body style="font-size:20px;">
+<body>
 
     <form id="tableData" action="Index" method="post">
         <div class="col-md-6">
             <div style="font-size:25px;" class="editor-label">
                 CoilID Scanned
             </div>
-            <div class="editor-field col-md-6">
+            <div class="editor-field">
                 @Html.TextAreaFor(model => model.CoilDetails[0].Input, new { id = "ID", style = "width: 520px; height:250px; border: 2px solid #ccc;" })
-                @Html.TextBoxFor(model => model.CoilDetails[0].Save, new { id = "Save", type = "hidden" })
-                @Html.TextBoxFor(model => model.CoilDetails[0].Save2, new { id = "Save2", type = "hidden" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Save, new { id = "Save" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Save2, new { id = "Save2" })
                 <h3>Please press Tab button to display data</h3>
-            </div>
-            <div class="col-md-4">
-                <input type="submit" id="clear" value="clear table" style="font-size:25px; width:150px; height:100px;" />
-                <input type="submit" id="uploadButton" value="upload table" style="font-size:25px; width:150px; height:100px;" />
             </div>
         </div>
         <div class="col-md-6">
             <div style="width:300px; text-align:center;">
-                <img src="C:\Scanner\Upload-QRcode.png" alt="QRcode for upload data" height="300" width="300" />
+                <img src="C:/Scanner/Upload-QRcode.png" alt="QRcode for upload data" height="300" width="300" />
                 Upload Data
             </div>
 
             <div class="editor-field">
-                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "uploadFlag", type="hidden" })
+                @Html.TextBoxFor(model => model.CoilDetails[0].Flag, new { id = "uploadFlag" })
             </div>
         </div>
         <div class="col-md-12">
             <div style="color:red; font-size:40px">@ViewBag.Error @ViewBag.Upload</div>
-            <table id="data" class="table table-condensed table-hover">
-                <tr>
-                    <th>
-                        ID
-                    </th>
-                    <th>
-                        Type
-                    </th>
-                    <th>
-                        Color
-                    </th>
-                    <th>
-                        Weight
-                    </th>
-                    <th>
-                        Gauge
-                    </th>
-                    <th>
-                        Width
-                    </th>
-                    <th>
-                        Order
-                    </th>
-                    <th>
-                        P_order
-                    </th>
-                    <th>
-                        Month_recd
-                    </th>
-                    <th>
-                        Date_inwh
-                    </th>
-                    <th>
-                        Date_transfer
-                    </th>
-                    <th>
-                        Last_stocktake_date
-                    </th>
-                    <th>
-                        Status
-                    </th>
-                    <th>
-                        Clength
-                    </th>
-                </tr>
-                @{
-                    int i = 0;
-                    if (Model != null && Model.CoilDetails != null)
-                    {
-                        foreach (var item in Model.CoilDetails.Skip(1).ToList())
-                        {
+            <div id="table-wrapper">
+                <div id="table-scroll">
+                    <table id="data">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].ID, new { @id = "ID_" + i })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Type, new { @id = "Type_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Color, new { @id = "Color_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Weight, new { @id = "Weight_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Gauge, new { @id = "Gauge_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Width, new { @id = "Width_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Order, new { @id = "Order_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].P_order, new { @id = "P_order_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Month_recd, new { @id = "Month_recd_" + i })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Date_inwh, new { @id = "Date_inwh_" + i })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Date_transfer, new { @id = "Date_transfer_" + i })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Last_stocktake_date, new { @id = "Last_stocktake_date_" + i })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Status, new { @id = "Status_" + i, style = "width:50px" })
-                                </td>
-                                <td>
-                                    @Html.TextBoxFor(model => model.CoilDetails[i + 1].Clength, new { @id = "Clength_" + i })
-                                </td>
+                                <th>
+                                    <span class="text">ID</span>
+                                </th>
+                                <th>
+                                    <span class="text">Type</span>
+                                </th>
+                                <th>
+                                    <span class="text">Color</span>
+                                </th>
+                                <th>
+                                    <span class="text">Weight</span>
+                                </th>
+                                <th>
+                                    <span class="text">Gauge</span>
+                                </th>
+                                <th>
+                                    <span class="text">Width</span>
+                                </th>
+                                <th>
+                                    <span class="text">Order</span>
+                                </th>
+                                <th>
+                                    <span class="text">P_order</span>
+                                </th>
+                                <th>
+                                    <span class="text">Month_recd</span>
+                                </th>
+                                <th>
+                                    <span class="text">Date_inwh</span>
+                                </th>
+                                <th>
+                                    <span class="text">Date_transfer</span>
+                                </th>
+                                <th>
+                                    <span class="text">Last_stocktake_date</span>
+                                </th>
+                                <th>
+                                    <span class="text">Status</span>
+                                </th>
+                                <th>
+                                    <span class="text">Clength</span>
+                                </th>
                             </tr>
-                            i++;
-                        }
-                    }
-                }
-            </table>
-        </div>
-    </form>
+                        </thead>
+                        <tbody>
+                            @{
+                                int i = 0;
+                                if (Model != null && Model.CoilDetails != null)
+                                {
+                                    foreach (var item in Model.CoilDetails.Skip(1).ToList())
+                                    {
+                                        <tr>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].ID, new { @id = "ID_" + i })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Type, new { @id = "Type_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Color, new { @id = "Color_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Weight, new { @id = "Weight_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Gauge, new { @id = "Gauge_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Width, new { @id = "Width_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Order, new { @id = "Order_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].P_order, new { @id = "P_order_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Month_recd, new { @id = "Month_recd_" + i })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Date_inwh, new { @id = "Date_inwh_" + i })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Date_transfer, new { @id = "Date_transfer_" + i })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Last_stocktake_date, new { @id = "Last_stocktake_date_" + i })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Status, new { @id = "Status_" + i, style = "width:50px" })
+                                            </td>
+                                            <td>
+                                                @Html.TextBoxFor(model => model.CoilDetails[i + 1].Clength, new { @id = "Clength_" + i })
+                                            </td>
+                                        </tr>
+                                        i++;
+                                    }
+                                }
+                            }
+                        </tbody>
+                    </table>
+                    </div>
+                </div>
+                </div>
+                <div class="col-md-12">
+                    <input type="submit" id="clear" value="clear" style="font-size:25px; width:150px; height:100px;" />
+                    <input type="submit" id="uploadButton" value="update" style="font-size:25px; width:150px; height:100px; float:right;" />
+                </div>
+</form>
 
 </body>
 </html>
