--- a/Scanner/Views/Shared/_Layout.cshtml
+++ b/Scanner/Views/Shared/_Layout.cshtml
@@ -7,77 +7,66 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-        <style type="text/css" media="screen">
-        body {
-            position: relative
-        }
-    </style>
     <style type="text/css" id="custom-background-css">
         body.custom-background {
             background-color: #eaf6ff;
         }
+        #table-wrapper {
+            position: relative;
+        }
+
+        #table-scroll {
+            height: 400px;
+            overflow: auto;
+            margin-top: 20px;
+        }
+
+        #table-wrapper table {
+            width: 100%;
+        }
+
+        td {
+            padding: 3px;
+        }
+
+        table {
+            margin: 2px;
+        }
+
+        #table-wrapper table thead th .text {
+            position: absolute;
+            top: -20px;
+            z-index: 2;
+            height: 20px;
+            width: 35%;
+        }
     </style>
 </head>
 <body style="width:100% !important;">
-        <table style="width:100%">
-            <tr>
-                <td>
-                    <div class="wrapper2" style="width:100% !important;">
-                        <div id="page" class="hfeed" style="width:100% !important;">
-                            <header id="branding" role="banner" style="width:100% !important;">
-                                @*<hgroup>*@
-                                <div style="width:100%; height:100px; float:left; margin-top:17px;">
-                                    <table style="margin-left:auto;margin-right:auto;width:1200px;">
-                                        <tr>
-                                            <td>
-                                                <img border="0" src="http://www.gram.com.au/wp-content/themes/twentyeleven/images/logo1.jpg" width="290" height="100" alt="Gramline" title="GramLine" />
-                                            </td>
-                                            <td>
-                                                <table style="height:100%;">
-                                                    <tr>
-                                                        <td>
-                                                            <div id="urgentMes"></div>
-                                                            <div style="position:absolute; width:315px;  right:176px; top:15px;">
-                                                                <span class="glyphicon glyphicon-home" style="color:#fff"></span><span class="glyphicon glyphicon-home" style="color:#fff"></span>
-                                                                &nbsp;&nbsp;<span style="font-size:17px; color:#fff;">MARKETING</span>
-                                                            </div>
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td valign="bottom">
-                                                        </td>
-                                                    </tr>
-                                                </table>
-                                            </td>
-                                        </tr>
-                                    </table>
-                                </div>
-                                @*</hgroup>*@
-                            </header>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <table style="width:100%">
-                        <tr>
-                            <td style="width:95%">@RenderBody()</td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <br /><br /><br />
-                                <footer style="width:100%">
-                                    <div style="text-align:center;"><hr style="width:400px;" /><p>&copy; @DateTime.Now.Year - Gram Engineering Pty Ltd</p></div>
-                                </footer>
-                                <br /><br /><br />
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
 
+    <div class="wrapper2" style="width:100% !important;">
+        <div id="page" class="hfeed" style="width:100% !important;">
+            <header id="branding" role="banner" style="width:100% !important;">
+                @*<hgroup>*@
+                <div style="width:100%; height:100px; float:left; margin-top:17px; margin-left:17px;">
+                    <img border="0" src="http://www.gram.com.au/wp-content/themes/twentyeleven/images/logo1.jpg" width="290" height="100" alt="Gramline" title="GramLine" />
+                    <div id="urgentMes"></div>
+                    <div style="position:absolute; width:315px;  right:176px; top:15px;">
+                        <span class="glyphicon glyphicon-home" style="color:#fff"></span><span class="glyphicon glyphicon-home" style="color:#fff"></span>
+                        &nbsp;&nbsp;<span style="font-size:17px; color:#fff;">MARKETING</span>
+                    </div>
+
+                </div>
+                @*</hgroup>*@
+            </header>
+        </div>
+    </div>
+    <div style="width:100%">@RenderBody()</div>
+    <div class="col-md-12">
+        <footer style="width:100%">
+            <div style="text-align:center;"><hr style="width:400px;" /><p>&copy; @DateTime.Now.Year - Gram Engineering Pty Ltd</p></div>
+        </footer>
+    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
